Parser/test_cases/good/dispatchimpliedonearg.cl
class Test {
  foo:Test;
  bar(x:Int):Object{bar(x)};
};
