Parser/test_cases/bad/recovermethod.cl
class Foo {
    bad1() {0};
    good1() : Int {0};
    good2() : Int {0};
    bad2() {0};
};
